syntax = "proto3";

package apps_installer;


// ==== apps.installer capability ====

message RequestWithAppId {
	string id = 1;
}

message RequestWithAppIdAndVersion {
	string id = 1;
	string version = 2;
}

// --- apps.installer.unpackBundledApp ---
// Its an observable call, and initial request is RequestWithAppId.
message BundleUnpackProgress {
	uint32 numOfFiles = 1;
	uint32 numOfProcessed = 2;
	string fileInProgress = 3;
}

// --- apps.installer.installApp ---
// Request body is RequestWithAppIdAndVersion
// Reply body is empty

// --- apps.installer.removeAppPack ---
// Request body is RequestWithAppIdAndVersion
// Reply body is empty

// --- apps.installer.uninstallApp ---
// Request body is RequestWithAppId
// Reply body is empty
